# mod-interleaveavx_multithreads-FAID

./: .clang-format  .gitignore  CChannel.cpp  CChannel.h  CDecoder_FAID.cpp  CDecoder_FAID_2B1C.cpp  CDecoder_OMS.cpp  CDecoder_OMSBF.cpp  CDecoder_OMS_DTBF.cpp  CLDPC.cpp  CLDPC.h  CMakeLists.txt  CModulate.cpp  CModulate.h  CSimulate.cpp  CSimulate.h  CTool.cpp  CTool.h  Codeword.h  Makefile  Profile.txt  README.md  main.cpp  poisx_memalign.h
Constants/: Constants_SSE.h
Constants/50GPON-dc-original/: Constants_SSE.h
